feat: [AIDT-3224] add report locale setting